# unreal-mcp

./: .gitignore  README.md  test_connection.py  test_raw_socket.py  test_spawn_actor.py
.claude/: settings.local.json
Docs/: UE56MigrationNotes.md
MCPGameProject/: MCPGameProject.sln  MCPGameProject.uproject
MCPGameProject/Config/: DefaultEditor.ini
MCPGameProject/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
Python/: .secrets.example.env  README.md  automation.py  automation_specs.py  dedup.py  gauntlet.py  metasound_render.py  observability.py  protocol.py  pyproject.toml  server.py  test_protocol_framing.py  uat.py  unreal_mcp_server.py
Python/cli/: README.md  __main__.py  pyproject.toml
Python/cli/mcp_cli/: __init__.py  cli.py  logs.py  mcp_client.py  recipes.py  schema.py
Python/security/: audit_sign.py  policy.py  rate_limit.py  sandbox.py  schema_registry.py
_package/UnrealMCP_Win64/HostProject/: HostProject.uproject
logs/: BuildPlugin-20251006-121912.txt  BuildPlugin-20251007-081608.txt  BuildPlugin-20251007-111016.txt  BuildPlugin-20251007-120715.txt  BuildPlugin-20251007-145526.txt  BuildPlugin-20251007-153335.txt  BuildPlugin-20251007-161636.txt  BuildPlugin-20251007-184234.txt  BuildPlugin-20251015-090612.txt  BuildPlugin-20251015-112526.txt  BuildPlugin-20251015-115305.txt  BuildPlugin-20251015-174055.txt  BuildPlugin-20251016-102358.txt  BuildPlugin-20251016-111645.txt
scripts/: Build-Plugin.cmd  Build-Plugin.ps1
(+163 files in other folders)
