[project]
name = "mcp-cli"
version = "0.1.0"
description = "Command line interface for the Unreal MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.3",
    "PyYAML>=6.0.1",
    "jmespath>=1.0.1",
    "tenacity>=8.2.3",
    "rich>=13.7.1",
]

[project.scripts]
mcp = "mcp_cli.__main__:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_cli"]
